default/objects/SBQQ__Quote__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <description>Address to use for billing purposes</description>
    <inlineHelpText>Address to use for billing purposes</inlineHelpText>
    <label>Bill to Address</label>
    <type>Address</type>
</CustomField>