default/objects/SBQQ__Quote__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>OLD - Billing Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>