default/objects/SBQQ__Quote__c/fields/Check_out__c.field-meta.xml
<CustomField>
    <fullName>Check_out__c</fullName>
    <label>Check-out</label>
    <required>true</required>
    <type>Date</type>
</CustomField>