default/objects/SBQQ__Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Contact)</relationshipLabel>
    <relationshipName>ContactName</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>