default/objects/SBQQ__Quote__c/validationRules/Check_in_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_in_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Check_in__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Check_in__c</errorDisplayField>
    <errorMessage>The Check-in date cannot be in the past.</errorMessage>
</ValidationRule>