default/objects/SBQQ__Quote__c/validationRules/Check_out_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_out_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Check_out__c &lt;= Check_in__c</errorConditionFormula>
    <errorDisplayField>Check_out__c</errorDisplayField>
    <errorMessage>The Check-out date must be after the Check-in date.</errorMessage>
</ValidationRule>